# wxauto-repost-onebotv11-improved

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  metadata.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.json
data/: cmd_config.json  data_v3.db
src/: __init__.py  config_manager.py  config_watcher.py  constants.py  exceptions.py  file_handler.py  logger.py  message_filter.py  message_handler.py  message_parser.py  onebot_converter.py  web_ui.py  websocket_client.py  wechat_monitor.py  window_controller.py
src/templates/: index.html
static/js/: app.js
tests/: test_config_manager.py  test_config_watcher.py  test_constants.py  test_cq_parser.py  test_exceptions.py  test_logger.py  test_logger_advanced.py  test_message_modules.py  test_onebot_converter.py  test_web_ui.py  test_websocket.py
